[gd_scene load_steps=15 format=3 uid="uid://b5h5o54dhl40a"]

[ext_resource type="Script" path="res://enemies/mons.gd" id="1_4p7vg"]
[ext_resource type="Texture2D" uid="uid://co0kif2adueac" path="res://art/Chesse_ALL.png" id="2_o22mb"]
[ext_resource type="Texture2D" uid="uid://dkud3wfv863fc" path="res://art/death.png" id="3_kduai"]
[ext_resource type="AudioStream" uid="uid://kxf21jn4ob0b" path="res://sounds/pop.wav" id="4_8fsbl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ic04a"]
radius = 21.0
height = 44.0

[sub_resource type="Animation" id="Animation_rs0r1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_aadm5"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_toy4l"]
resource_name = "deathAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeathSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DeathSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_plnvb"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13, 14, 15, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e1aqi"]
_data = {
"RESET": SubResource("Animation_rs0r1"),
"attack": SubResource("Animation_aadm5"),
"deathAnimation": SubResource("Animation_toy4l"),
"walk": SubResource("Animation_plnvb")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mkq6b"]
radius = 20.6155

[sub_resource type="CircleShape2D" id="CircleShape2D_582c7"]
radius = 21.095

[sub_resource type="CircleShape2D" id="CircleShape2D_s6l80"]
radius = 82.0

[sub_resource type="CircleShape2D" id="CircleShape2D_itdp8"]
radius = 46.0977

[node name="Cheese" type="CharacterBody2D" node_paths=PackedStringArray("attackSpeedTimer")]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_4p7vg")
attackSpeedTimer = NodePath("AtkSpeed")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_ic04a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e1aqi")
}

[node name="hitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
shape = SubResource("CircleShape2D_mkq6b")

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
shape = SubResource("CircleShape2D_582c7")

[node name="detectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
shape = SubResource("CircleShape2D_s6l80")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -3)
texture = ExtResource("2_o22mb")
hframes = 22

[node name="AtkSpeed" type="Timer" parent="."]
one_shot = true

[node name="DeathSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_kduai")
hframes = 6

[node name="AttackRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_itdp8")

[node name="popSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8fsbl")

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="hurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
